objects/SC_Budget_Forecast__c/SC_Budget_Forecast__c.object-meta.xml
<CustomObject>
    <label>SC Budget/Forecast</label>
    <nameField>
        <displayFormat>B-{000}</displayFormat>
        <label>SC Budget/Forecasting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC Budget/Forecasting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>