objects/SC_Budget_Forecast__c/fields/Budget_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Month__c</fullName>
    <label>Month</label>
    <type>Date</type>
</CustomField>