objects/SC_Budget_Forecast__c/fields/GM_Forecast__c.field-meta.xml
<CustomField>
    <fullName>GM_Forecast__c</fullName>
    <label>GM Forecast</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>