objects/SC_Budget_Forecast__c/fields/MHT_Forecast__c.field-meta.xml
<CustomField>
    <fullName>MHT_Forecast__c</fullName>
    <label>MHT Forecast</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>