objects/SC_Budget_Forecast__c/fields/MyServiceCenter__c.field-meta.xml
<CustomField>
    <fullName>MyServiceCenter__c</fullName>
    <formula>IF(Text($User.Service_Center__c) =  SC_Budget_Forecast__r.Name , true,OR(CONTAINS($User.Manager_of_SC__c, SC_Budget_Forecast__r.Name), CONTAINS($User.Manager_of_SC_2__c, SC_Budget_Forecast__r.Name)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyServiceCenter</label>
    <type>Checkbox</type>
</CustomField>