objects/SC_Budget_Forecast__c/fields/Opportunity_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Forecast__c</fullName>
    <label>Opportunity Forecast</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>