objects/SC_Budget_Forecast__c/fields/SC_Budget_Forecast__c.field-meta.xml
<CustomField>
    <fullName>SC_Budget_Forecast__c</fullName>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>SC Budget/Forecasting</relationshipLabel>
    <relationshipName>SC_Budget_Forecasting</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>