objects/SC_Budget_Forecast__c/fields/WIP_Forecast__c.field-meta.xml
<CustomField>
    <fullName>WIP_Forecast__c</fullName>
    <label>WIP Forecast</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>